# ToDoBy

./: Cargo.toml  todo.txt
src/: README.md  load.rs  main.rs  ui.rs
src/item/: item.rs  item_parser.rs  mod.rs
test/load/: 1-content-and-0-between.txt  1-content-and-1-between.txt  1-content-and-2-between.txt  2-content-and-0-between.txt  2-content-and-1-between.txt  2-content-and-2-between.txt  list-item-symbols.txt
