[package]
name = "todoby-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
cursive_calendar_view = "0.8"
cursive_table_view = "0.14"
cursive_tree_view = "0.8"
cursive-tabs = "^0"
cursive-markup = "^0"
indoc = "*"
nom = { version = "7.1.1", features = ["alloc"] }
nom-unicode = "*"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
